# field-practice-docs

./: .gitignore  LICENSE  README.md  install.sh
.codex-plugin/: plugin.json
scripts/: ci_e2e.sh
skills/field-practice-docs/: SKILL.md  package-lock.json  package.json
skills/field-practice-docs/agents/: openai.yaml
skills/field-practice-docs/engine/: README.md  pyproject.toml
skills/field-practice-docs/engine/configs/: project.yaml  taxonomy.yaml  week_plan.yaml
skills/field-practice-docs/engine/scripts/: fill_hwpx_template.mjs  hwp_rhwp.mjs  inspect_hwpx_template.mjs  markdown_to_hwpx.mjs
skills/field-practice-docs/engine/src/field_practice/: activity_quality.py  allocate_time.py  allocation_rows.py  cell_fill_command.py  classify.py  cli.py  config.py  direct_hwp_validation.py  direct_template_fill.py  direct_template_inspect.py  discover_git.py  doctor_cli.py  document_cli.py  draft_cli.py  enrich_activities.py  enrich_activity_text.py  enrich_models.py  enrich_readers.py  export_hwpx.py  generate_reports.py  hwp_final_markdown.py  hwp_markdown.py  hwp_validation.py  hwpx_xml.py  ingest_alog.py  ingest_calendar.py  ingest_github.py  ingest_local_git.py  models.py  rhwp_backend.py  template_cell_fill.py  template_document.py  timeparse.py  validate.py  weekly_full_report.py  weeks.py  writers.py
skills/field-practice-docs/engine/tests/: hwpx_fixture.py  test_activity_quality.py  test_allocation.py  test_alog_weekly.py  test_caps.py  test_classification.py  test_cli_surface.py  test_direct_hwp_validation.py  test_direct_template_fill.py  test_discover_git.py  test_enrich_activities.py  test_export_hwpx.py  test_final_template_fill.py  test_hwp_markdown.py  test_hwpx_xml.py  test_ingest_local_git.py  test_validation.py  test_week8_shortage.py  test_weeks.py
skills/field-practice-docs/references/: blanking-review-hop.md  deslop.md  external-work-reason.md  hwpx-editing.md  io-contract.md  pdf-memo-removal.md  pipeline.md  ultrawork.md  verification.md
skills/field-practice-docs/scripts/: blank_form.py  deslop_analyze.py  hwp_render.mjs  hwpx_extract.py  hwpx_replace.py  init_run.py  pdf_remove_memos.py  (+1 more)
